manifests/examples/scratch-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: scratch
  labels:
    name: scratch
