manifests/examples/cow-say.yaml
apiVersion: v1
kind: Service
metadata:
  name: cow-svc
spec:
  selector:
    app: cowsay
  ports:
    - name: cow-port
      port: 80
      targetPort: cowsay-port
      nodePort: 31002
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cow-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cowsay
    spec:
      containers:
        - name: cowsay
          image: swarmgs/cowsay
          ports:
            - containerPort: 80
              name: cowsay-port
