manifests/examples/news_splash.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: newsplash
  namespace: scratch
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/port: "443"
    alb.ingress.kubernetes.io/subnets: subnet-a74815ee,subnet-682abe33,subnet-f3602b94
    alb.ingress.kubernetes.io/security-groups: sg-8d6e96f6  # node security groups
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: news-splash.dti.nuk-kube-dev.ntch.co.uk.
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:540909713637:certificate/f0d770c9-f155-4ddd-9559-e63617c6d9e0"
spec:
# backend:   # Not Required. Default backend already configured when setting up alb controller
#   serviceName: splash-page
#   servicePort: 80
  rules:
    - host: news-splash.dti.nuk-kube-dev.ntch.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: splash-page
              servicePort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: splash-page
  namespace: scratch
  labels:
    prometheus-enabled: "true"
    app: newsplash
  annotations:
    external-dns.alpha.kubernetes.io/hostname: news-splash.dti.nuk-kube-dev.ntch.co.uk.
spec:
  selector:
    app: newsplash
    version: "1"
  ports:
    - name: metrics
      port: 80
      targetPort: 80
    - name: splash-port
      port: 443
      targetPort: 80
      nodePort: 31003
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: newsplash-dep
  namespace: scratch
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: newsplash
        version: "1"
    spec:
      containers:
        - name: newsplash
          image: quay.io/djsd123/newsplash:v2
          ports:
            - name: newsplash-port
              containerPort: 80
        - name: metrics-exporter
          image: sophos/nginx-vts-exporter
